fixed deprecated use of Integer(int) and clazz.newInstance()